[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pywcsgrid2"
authors = [{name = "Jae-Joon Lee", email = "lee.j.joon@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.5"
readme = "README.md"
dependencies = [
    "matplotlib >=3.5",
    "astropy >=4",
]

[project.urls]
Home = "http://leejjoon.github.io/pywcsgrid2/"

[project.optional-dependencies]
doc = ["sphinx"]

[project.scripts]
flit = "flit:main"
